--- a/html/controls/plt/plt-input.css
+++ b/html/controls/plt/plt-input.css
@@ -70,6 +70,8 @@ body:not(.AllowSelect) .PLT {
 #PenaltyEditor .Codes>div div { text-align: center; }
 #PenaltyEditor .Codes>div .Code { font-size: 1.2em; background-color: #FAA; color: #000; }
 #PenaltyEditor .Codes>div .Description { font-size: 0.75em; }
+#PenaltyEditor .ui-button { font-size: 75%; }
+#PenaltyEditor .ui-button.checked { background: #3f3; }
 
 #AnnotationEditor .Hide { display: none; }
 #AnnotationEditor .ui-button { font-size: 75%; }
