--- a/html/controls/plt/plt-input.css
+++ b/html/controls/plt/plt-input.css
@@ -72,6 +72,7 @@ body:not(.AllowSelect) .PLT {
 #PenaltyEditor .Codes>div .Description { font-size: 0.75em; }
 #PenaltyEditor .ui-button { font-size: 75%; }
 #PenaltyEditor .ui-button.checked { background: #3f3; }
+#PenaltyEditor .Hide { display: none; }
 
 #AnnotationEditor .Hide { display: none; }
 #AnnotationEditor .ui-button { font-size: 75%; }
