--- a/html/controls/lt/lt-sheet.css
+++ b/html/controls/lt/lt-sheet.css
@@ -34,6 +34,8 @@ div.LT { font-size: 200%; text-align: center; background-color: #cccccc; color: 
 .LT.Period .NP { width: 25px; }
 .LT.Period .Skater { width: 12%; }
 .LT.Period .Box { width: 8%; }
+.LT.Period .hasAnnotation { position: relative; }
+.LT.Period .hasAnnotation::after { position: absolute; right: 2px; top: 2px; height: 5px; width: 5px; background-color: red; content: ""; }
 
 #FieldingEditor .tripHeader { text-align: center; font-size: 95%; background-color: #222; color: #FFF; }
 #FieldingEditor .ButtonCell { text-align: center; }
