--- a/html/components/rulesets-tab.css
+++ b/html/components/rulesets-tab.css
@@ -1,17 +1,18 @@
 #RulesetsTab .rulesets {
 	display: inline-block;
 	vertical-align:top;
-	width: 20%;
-	height: 85vh;
-	border-right: 1px solid black;
+	width: calc(20% - 10px);
+	padding: 5px 5px 20px 5px;
+	background-color: #ccc;
+	border-radius: 12px;
 	overflow: hidden;
 }
 
 #RulesetsTab .definitions {
 	display: inline-block;
 	vertical-align:top;
-	padding-left: 1%;
-	width: 78%;
+	padding-left: 2px;
+	width: 79%;
 	overflow: auto;
 }
 
@@ -19,13 +20,20 @@
 #RulesetsTab th { text-align: left; }
 #RulesetsTab #new_parent, #new_name { width: 99%; }
 
-#RulesetsTab .rules { padding-top: 10px; }
-#RulesetsTab .definitions .section { width: 100%; clear: both; }
-#RulesetsTab .definitions .section .header { background-color: lightgray; font-weight: bold; margin-top: 2px; }
-#RulesetsTab .definitions .section .definition { width: 100%; height: 1em; clear: both; padding: 0px; margin: 0px; }
+#RulesetsTab .rulesets a { color: #333333; }
+#RulesetsTab .rulesets .new { text-align: center; }
+#RulesetsTab .rules { padding-top: 5px; }
+#RulesetsTab .definitions .buttons { background-color: #ccc; padding: 3px 20px; }
+#RulesetsTab .definitions .buttons.top { border-radius: 12px 12px 0px 0px; margin-bottom: 5px; }
+#RulesetsTab .definitions .buttons.bottom { border-radius: 0px 0px 12px 12px; margin-top: 2px; }
+#RulesetsTab .definitions .buttons button { margin-left: 10px;}
+#RulesetsTab .definitions .section { width: 100%; clear: both; background-color: #eee; }
+#RulesetsTab .definitions .section .header { background-color: #ccc; font-weight: bold; margin-top: 2px; cursor: pointer; }
+#RulesetsTab .definitions .section .definition { width: 100%; height: 1.3em; clear: both; }
+#RulesetsTab .definitions .section .definition:nth-child(odd) { background-color: #ddd; }
 #RulesetsTab .definitions .section .definition div { float: left; }
-#RulesetsTab .definitions .section .definition .name { width: 40%; display: inline-block; position: relative; }
-#RulesetsTab .definitions .section .definition .value { width: 60%; }
+#RulesetsTab .definitions .section .definition .name { width: 50%; display: inline-block; position: relative; }
+#RulesetsTab .definitions .section .definition .value { width: 50%; }
 #RulesetsTab .definitions .section:not(.folded) .header:before {content: "-- "; }
 #RulesetsTab .definitions .section.folded .header:before {content: "+ "; }
 #RulesetsTab .definitions .section.folded .definition { display:none; }
