--- a/html/settings/devices/index.css
+++ b/html/settings/devices/index.css
@@ -8,6 +8,14 @@ table.Devices, .Devices thead, .Devices tbody, .Devices tr, .Devices td, .Device
 .Devices tbody:nth-child(odd) { background-color: #e7f3ff; }
 .Devices tbody:nth-child(even) { background-color: #cee7ff; }
 
+.Devices td, .Devices th { padding: .4ex; }
+.Devices .RemoteAddr, .Devices .Created, .Devices .LastSeen { text-align: right; }
 
-.Devices td, .Devices th { padding: .2ex; }
-.Devices .RemoteAddr { text-align: right; }
+/* Hide LastSeen for a device if it has active clients. */
+.Devices tbody tr:first-child:not(:only-child) .LastSeen { font-size: 0;}
+.Devices tbody tr:first-child:not(:only-child) .LastSeen:before {
+  content: "0s";
+  font-size: initial;
+  padding: .4ex;
+}
+
