--- a/html/settings/devices/index.css
+++ b/html/settings/devices/index.css
@@ -9,7 +9,7 @@ table.Devices, .Devices thead, .Devices tbody, .Devices tr, .Devices td, .Device
 .Devices tbody:nth-child(even) { background-color: #cee7ff; }
 
 .Devices td, .Devices th { padding: .4ex; }
-.Devices .RemoteAddr, .Devices .Created, .Devices .LastSeen { text-align: right; }
+.Devices .RemoteAddr, .Devices .Created, .Devices .LastSeen, .Devices .LastWrite { text-align: right; }
 .Devices .Blank { border-style: dotted; }
 
 /* Hide LastSeen for a device if it has active clients. */
